--- a/blog.qmd
+++ b/blog.qmd
@@ -11,7 +11,7 @@ listing:
   categories: true
   sort-ui: false
   filter-ui: false
-page-layout: full
+#page-layout: full
 title-block-banner: true
 format:
   html:
