--- a/blog/2023-12-13-website/index.qmd
+++ b/blog/2023-12-13-website/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Resources for building your website with Quarto"
-description: |
+subtitle: |
   and some extra tips ;)
 author:
   - name: Virginia García Alonso 
