--- a/viz.qmd
+++ b/viz.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Viz gallery"
-subtitle: "some logos, figures and presentations (still under construction )"
+subtitle: "still under construction 🔧"
 listing:
   contents: viz
   feed: true
@@ -18,6 +18,6 @@ format:
   html:
     grid:
       sidebar-width: 250px
-      body-width: 600px
+      body-width: 650px
 title-block-banner: true
 ---
