--- a/blog.qmd
+++ b/blog.qmd
@@ -11,9 +11,9 @@ listing:
   categories: true
   sort-ui: false
   filter-ui: false
-  fields: [title, subtitle, date, categories, image]
+  fields: [title, subtitle, date, author, categories, image]
   grid-columns: 2
-#page-layout: full
+page-layout: full
 title-block-banner: true
 format:
   html:
